--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "got": ">=11.8.5",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "trim": ">=0.0.3"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.0.1",
