Modify some Chinese translation error

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -2,3 +2,7 @@ taowang:
   name: Tao Wang
   url: https://github.com/huwangtao123
   image_url: https://github.com/huwangtao123.png
+AladdinDao:
+  name: Aladdin Dao
+  url: https://github.com/AladdinDAO
+  image_url: https://github.com/AladdinDAO.png
