--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@crowdin/cli": "^3.7.9",
     "@docusaurus/core": "^2.1.0",
     "@docusaurus/preset-classic": "^2.1.0",
+    "@giscus/react": "^2.2.0",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
     "got": ">=11.8.5",
