--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@crowdin/cli": "^3.7.9",
     "@docusaurus/core": "^2.1.0",
+    "@docusaurus/plugin-google-analytics": "^2.2.0",
     "@docusaurus/preset-classic": "^2.1.0",
     "@giscus/react": "^2.2.0",
     "@mdx-js/react": "^1.6.22",
