--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@docusaurus/core": "^2.1.0",
     "@docusaurus/plugin-google-analytics": "^2.2.0",
     "@docusaurus/preset-classic": "^2.1.0",
+    "@easyops-cn/docusaurus-search-local": "^0.33.5",
     "@giscus/react": "^2.2.0",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
