--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@ant-design/charts": "^1.4.2",
+    "@ant-design/plots": "^1.2.2",
+    "@ant-design/pro-components": "^2.3.28",
     "@crowdin/cli": "^3.7.9",
     "@docusaurus/core": "^2.1.0",
     "@docusaurus/preset-classic": "^2.1.0",
     "@easyops-cn/docusaurus-search-local": "^0.33.5",
     "@giscus/react": "^2.2.0",
     "@mdx-js/react": "^1.6.22",
+    "antd": "^4.24.1",
     "clsx": "^1.2.1",
     "got": ">=11.8.5",
     "prism-react-renderer": "^1.3.5",
