--- a/package.json
+++ b/package.json
@@ -16,25 +16,20 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@ant-design/charts": "^1.4.2",
-    "@ant-design/plots": "^1.2.2",
-    "@crowdin/cli": "^3.7.9",
-    "@docusaurus/core": "^2.3.0",
-    "@docusaurus/preset-classic": "^2.3.0",
-    "@easyops-cn/docusaurus-search-local": "^0.33.5",
-    "@giscus/react": "^2.2.0",
-    "@mdx-js/react": "^1.6.22",
-    "antd": "^4.24.1",
-    "clsx": "^1.2.1",
-    "got": ">=11.8.5",
-    "prism-react-renderer": "^1.3.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@crowdin/cli": "^3.19.2",
+    "@docusaurus/core": "^3.2.0",
+    "@docusaurus/preset-classic": "^3.0.0",
+    "@giscus/react": "^3.0.0",
+    "@mdx-js/react": "^3.0.1",
+    "clsx": "^2.1.1",
+    "got": ">=14.2.1",
+    "prism-react-renderer": "^2.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.0.1",
-    "@tsconfig/docusaurus": "^1.0.5",
-    "typescript": "^4.7.4"
+    "@docusaurus/module-type-aliases": "3.2.1",
+    "@docusaurus/types": "3.2.1"
   },
   "browserslist": {
     "production": [
@@ -49,6 +44,6 @@
     ]
   },
   "engines": {
-    "node": ">=16.14"
+    "node": ">=18.0"
   }
 }
